@@ -83,7 +83,8 @@ Poeple/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		Added RGB protocol in CocosNode, Atlas, Texture
 		Particle reset system works as expected
 		CocosNode: fixed "already scheduled exception" bug
-	* Manu Valladolid: added isPaused property to Director	
+	* Manu Valladolid: added isPaused property to Director
+		patches for the setColor API for the RGBA protocol
 	* mark at abitofthought: author of the single threaded Fast Director
 	* Michal Szymerski: Added support for AtlasSprite as MenuItems
 	* Mitch: patches for Menu
