@@ -38,7 +38,8 @@
 	ccBlendFunc	blendFunc_;
 	
 	// texture RGBA
-	GLubyte	r_,g_,b_,opacity_;
+	GLubyte	opacity_;
+	ccColor3B color_;
 	BOOL opacityModifyRGB_;
 	
 }
@@ -50,5 +51,7 @@
 @property (readwrite) ccBlendFunc blendFunc;
 
 /** conforms to CocosNodeRGBA protocol */
-@property (readonly) GLubyte r, g, b, opacity;
+@property (readonly) GLubyte opacity;
+/** conforms to CocosNodeRGBA protocol */
+@property (readwrite) ccColor3B color;
 @end
