@@ -23,13 +23,15 @@
 
 @implementation TextureNode
 
-@synthesize opacity=opacity_, r=r_, g=g_, b=b_;
+@synthesize opacity=opacity_;
+@synthesize color=color_;
 @synthesize blendFunc = blendFunc_;
 
 - (id) init
 {
 	if( (self=[super init]) ) {
-		opacity_ = r_ = g_ = b_ = 255;
+		opacity_ = 255;
+		color_ = ccWHITE;
 		anchorPoint_ = ccp(0.5f, 0.5f);
 		blendFunc_.src = CC_BLEND_SRC;
 		blendFunc_.dst = CC_BLEND_DST;
@@ -62,11 +64,9 @@
 }
 
 #pragma mark TextureNode - RGBA protocol
--(void) setRGB: (GLubyte) rr :(GLubyte) gg :(GLubyte)bb
+-(void) setRGB: (GLubyte)r :(GLubyte)g :(GLubyte)b
 {
-	r_=rr;
-	g_=gg;
-	b_=bb;
+	[self setColor:ccc3(r,g,b)];
 }
 
 -(void) setOpacity:(GLubyte)opacity
@@ -74,7 +74,7 @@
 	// special opacity for premultiplied textures
 	opacity_ = opacity;
 	if( opacityModifyRGB_ )
-		r_ = g_ = b_ = opacity_;	
+		color_.r = color_.g = color_.b = opacity_;
 }
 -(void) setOpacityModifyRGB:(BOOL)modify
 {
@@ -93,7 +93,7 @@
 
 	glEnable( GL_TEXTURE_2D);
 
-	glColor4ub( r_, g_, b_, opacity_);
+	glColor4ub( color_.r, color_.g, color_.b, opacity_);
 
 	BOOL newBlend = NO;
 	if( blendFunc_.src != CC_BLEND_SRC || blendFunc_.dst != CC_BLEND_DST ) {
