@@ -293,9 +293,9 @@ Class restartAction()
 		
 		[MenuItemFont setFontSize:65];
 		MenuItemFont *decrease = [MenuItemFont itemFromString: @" - " target:self selector:@selector(onDecrease:)];
-		[decrease.label setRGB:0 :200 :20];
+		[decrease.label setColor:ccc3(0,200,20)];
 		MenuItemFont *increase = [MenuItemFont itemFromString: @" + " target:self selector:@selector(onIncrease:)];
-		[increase.label setRGB:0 :200 :20];
+		[increase.label setColor:ccc3(0,200,20)];
 		
 		Menu *menu = [Menu menuWithItems: decrease, increase, nil];
 		[menu alignItemsHorizontally];
@@ -303,7 +303,7 @@ Class restartAction()
 		[self addChild:menu z:1];
 		
 		Label *infoLabel = [Label labelWithString:@"0 nodes" fontName:@"Marker Felt" fontSize:30];
-		[infoLabel setRGB:0 :200 :20];
+		[infoLabel setColor:ccc3(0,200,20)];
 		infoLabel.position = ccp(s.width/2, s.height-90);
 		[self addChild:infoLabel z:1 tag:kTagInfoLayer];
 				
@@ -351,11 +351,11 @@ Class restartAction()
 		int i=0;
 		for( id child in [menu children] ) {
 			if( i<4)
-				[[child label] setRGB:200 :20 :20];
+				[[child label] setColor:ccc3(200,20,20)];
 			else if(i<8)
-				[[child label] setRGB:0 :200 :20];
+				[[child label] setColor:ccc3(0,200,20)];
 			else
-				[[child label] setRGB:0 :20 :200];
+				[[child label] setColor:ccc3(0,20,200)];
 			i++;
 		}
 		
@@ -367,7 +367,7 @@ Class restartAction()
 		Label* label = [Label labelWithString:[self title] fontName:@"Arial" fontSize:40];
 		[self addChild:label z:1];
 		[label setPosition: ccp(s.width/2, s.height-32)];
-		[label setRGB:255 :255 :40];
+		[label setColor:ccc3(255,255,40)];
 
 		
 		while(quantityNodes < nodes )
